--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -37,7 +37,7 @@
 \newcommand\mybackslash{\char`\\}
 
 % What this is about
-\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.0.14, 2018-08-20)}
+\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.0.15, 2018-09-06)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -52,8 +52,8 @@ Various bash scripts to aid the use of the quantum chemistry software package Ga
 
 \subsection{Preliminary notes}
 
-The notation in brackets \texttt{[]} indicate optional arguments/inputs;
-arguments in angles \texttt{<>} require human input;
+The notation in brackets \texttt{[ ]} indicate optional arguments/inputs;
+arguments in angles \texttt{< >} require human input;
 a bar \texttt{|} indicates alternatives.
 
 The following abbreviations will be used:
@@ -65,6 +65,21 @@ The following abbreviations will be used:
   \item[FLT] Floating point number
   \item[DUR] Duration in format \texttt{[[HH:]MM:]SS} 
 \end{rslisttt}
+
+\subsection{Installation \& Configuration}
+
+General settings for the scripts can be found in the file \texttt{g16.tools.rc}.
+Alternatively, settings can be stored in \texttt{.g16.toolsrc}, 
+which always has precedence.
+Every script will check three different directories in the order
+\begin{enumerate*}
+\item installation directory
+\item user's home
+\item parent working directory.
+\end{enumerate*}
+It will load the last configuration file it finds.
+
+Setting files can be generated with the \texttt{configure/configure.sh} script.
 
 \section{\texttt{g16.prepare.sh}}
 
@@ -85,9 +100,9 @@ Usage: \texttt{g16.prepare.sh [opt] <file>}
   \item[-t <ARG>] Adds \texttt{<ARG>} to end of file
   \item[-C <ARG>] Specify caption/title of job;\\ Replacements:
   \begin{rsinline} %Does not work as expected :(
-    \item[\%F] input filename,
-    \item[\%f] input filename without \texttt{.xyz},
-    \item[\%s] like \texttt{\%f}, also filtering \texttt{start},
+    \item[\%F] input filename;
+    \item[\%f] input filename without \texttt{.xyz};
+    \item[\%s] like \texttt{\%f}, also filtering \texttt{start};
     \item[\%j] jobname.
   \end{rsinline}
   \item[-j <ARG>] Jobname 
@@ -98,8 +113,8 @@ Usage: \texttt{g16.prepare.sh [opt] <file>}
   \item[-U <INT>] Memory
   \item[-m <INT>] Memory (megabyte)
   \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via MaxDisk (megabyte)
-  \item[-s      ] Silent script mode
+  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
@@ -110,11 +125,31 @@ tests the route section for syntax errors
 with the Gaussian 16 utility \texttt{testrt}.
 
 \begin{rslisttt}{-m <ARG>}
-  \item[-s      ] Silent script mode
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
 \section{\texttt{g16.freqinput.sh}}
+
+This tool reads in a Gaussian 16 inputfile and 
+adds relevant keywords for solvent corrections.
+
+Usage: \texttt{g16.freqinput.sh [opt] <file>}
+
+\begin{rslisttt}{-m <ARG>}
+  \item[-o <ARG>] Adds option \texttt{<ARG>} to the \texttt{scrf} keyword.
+  \item[-S <ARG>] Adds option \texttt{solvent=<ARG>} to the \texttt{scrf} option list.
+  \item[-O      ] Runs an optimisation (preserves or adds \texttt{OPT})
+  \item[-r <ARG>] Add \texttt{<ARG>} to route section
+  \item[-t <ARG>] Adds \texttt{<ARG>} to end of file
+  \item[-m <INT>] Memory (megabyte)
+  \item[-p <INT>] Processors
+  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
+  \item[-s      ] Silence script (incremental)
+  \item[-h      ] Help file 
+\end{rslisttt}
+
+\section{\texttt{g16.dissolve.sh}}
 
 This tool reads in a Gaussian 16 inputfile and 
 adds relevant keywords for a frequency calculation.
@@ -130,11 +165,10 @@ Usage: \texttt{g16.freqinput.sh [opt] <file>}
   \item[-t <ARG>] Adds \texttt{<ARG>} to end of file
   \item[-m <INT>] Memory (megabyte)
   \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via MaxDisk (megabyte)
-  \item[-s      ] Silent script mode
+  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
-
 
 \section{\texttt{g16.submit.sh}}
 
@@ -145,7 +179,7 @@ Usage: \texttt{g16.submit.sh [opt] <file>}
 \begin{rslisttt}{-m <ARG>}
   \item[-m <INT>] Memory (megabyte)
   \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via MaxDisk (megabyte)
+  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
   \item[-w <DUR>] Walltime limit
     %\item[-b <ARG>] Specify binary (TODO)
   \item[-e <ARG>] Specify an environment variable, format \texttt{VAR=<value>}
@@ -159,7 +193,7 @@ Usage: \texttt{g16.submit.sh [opt] <file>}
     if \texttt{<ARG>} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
   \item[-u <ARG>] set user email address (BSUB);
     if \texttt{<ARG>} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
-  \item[-s      ] Silent script mode
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
@@ -175,7 +209,7 @@ If no files given, it finds energy statements from all log files in the current 
 \begin{rslisttt}{-m <ARG>}
   \item[-i <ARG>] Specify input suffix if processing directory
   \item[-o <ARG>] Specify output suffix if processing directory
-  \item[-q      ] Silent script mode
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
@@ -190,7 +224,7 @@ Usage: \texttt{g16.getfreq.sh [opt] <file(s)>}
   \item[-V <INT>] Set level of verbosity directly, (0-4)
   \item[-c      ] Separate values by comma (\texttt{-V0} or \texttt{-V1})
   \item[-O <ARG>] Write summary to file instead of screen
-  \item[-q      ] Silent script mode
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
@@ -199,13 +233,16 @@ Usage: \texttt{g16.getfreq.sh [opt] <file(s)>}
 A tool to convert a checkpoint file to an \texttt{xyz} file. 
 This formats the \texttt{chk} first to a \texttt{fchk}.
 
-Usage: \texttt{g16.chk2xyz.sh -f | <checkpointfile(s)>}
+Usage: \texttt{g16.chk2xyz.sh [-s] -h | -f | <chk-file(s)>}
 
 \begin{rslisttt}{-m <ARG>}
   \item[-f      ] Formats all checkpointfiles that are found in the current directory
+  \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
 
+% move to end
+\vfill
 \section{Author, Bugs, and the Rest}
 
 \begin{flushright}
@@ -215,5 +252,11 @@ Martin C Schwarzer
 
 This document is licensed \ccbysa.
 \end{flushright}
+
+%because there currently is not enough to fill the second page
+\columnbreak
+\null\vfill\null
+\columnbreak
+\null\vfill\null
 
 \end{document}
