--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -129,12 +129,12 @@ with the Gaussian 16 utility \texttt{testrt}.
   \item[-h      ] Help file 
 \end{rslisttt}
 
-\section{\texttt{g16.freqinput.sh}}
+\section{\texttt{g16.dissolve.sh}}
 
 This tool reads in a Gaussian 16 inputfile and 
 adds relevant keywords for solvent corrections.
 
-Usage: \texttt{g16.freqinput.sh [opt] <file>}
+Usage: \texttt{g16.dissolve.sh [opt] <file>}
 
 \begin{rslisttt}{-m <ARG>}
   \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{scrf} keyword.
@@ -149,7 +149,7 @@ Usage: \texttt{g16.freqinput.sh [opt] <file>}
   \item[-h      ] Help file 
 \end{rslisttt}
 
-\section{\texttt{g16.dissolve.sh}}
+\section{\texttt{g16.freqinput.sh}}
 
 This tool reads in a Gaussian 16 inputfile and 
 adds relevant keywords for a frequency calculation.
