--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -60,8 +60,8 @@ The following abbreviations will be used:
 \begin{rslisttt}{ARG}
   \item[opt] Short for option(s)
   \item[ARG] String type argument
-  \item[INT] Positive integer
-  \item[NUM] Whole number
+  \item[INT] Positive integer (including zero)
+  \item[NUM] Whole number (including zero)
   \item[FLT] Floating point number
   \item[DUR] Duration in format \texttt{[[HH:]MM:]SS} 
 \end{rslisttt}
@@ -99,18 +99,21 @@ Usage: \texttt{g16.prepare.sh [opt] <file>}
   \item[-l list ] Show all predefined route sections
   \item[-t <ARG>] Adds \texttt{ARG} to end of file
   \item[-C <ARG>] Specify caption/title of job;\\ Replacements:
-  \begin{rsinline} %Does not work as expected :(
-    \item[\%F] input filename;
-    \item[\%f] input filename without \texttt{.xyz};
-    \item[\%s] like \texttt{\%f}, also filtering \texttt{start};
-    \item[\%j] jobname.
+  \begin{rsinline} 
+    \item[\%F] input filename
+    \item[\%f] input filename without \texttt{.xyz}
+    \item[\%s] like \texttt{\%f}, also filtering \texttt{start}
+    \item[\%j] jobname%
+    \item[\%c] charge (with indicator \texttt{chrg})
+    \item[\%M] multiplicity (with indicator \texttt{mult})
+    \item[\%U] unpaired electrons (with indicator \texttt{uhf})%
   \end{rsinline}
   \item[-j <ARG>] Jobname 
   \item[-j \%s  ] Jobname is filename filtering \texttt{start.xyz}
   \item[-f <ARG>] Filename of generated input
   \item[-c <NUM>] Charge 
-  \item[-M <INT>] Multiplicity (\( > 1 \))
-  \item[-U <INT>] Unpaired electrons (\( > 0 \))
+  \item[-M <INT>] Multiplicity (\( \geq 1 \))
+  \item[-U <INT>] Unpaired electrons (\( \geq 0 \))
   \item[-m <INT>] Memory (megabyte)
   \item[-p <INT>] Processors
   \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
@@ -148,6 +151,8 @@ Usage: \texttt{g16.dissolve.sh [opt] <file>}
   \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
+
+\columnbreak
 
 \section{\texttt{g16.freqinput.sh}}
 
@@ -197,6 +202,7 @@ Usage: \texttt{g16.submit.sh [opt] <file>}
   \item[-h      ] Help file 
 \end{rslisttt}
 
+\newpage
 
 \section{\texttt{g16.getenergy.sh}}
 
