--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -238,8 +238,6 @@ Usage: \texttt{g16.submit.sh [opt] <file>}
   \item[-h      ] Help file 
 \end{rslisttt}
 
-\columnbreak
-
 \section{\texttt{g16.getenergy.sh}}
 
 This tool finds energy statements from Gaussian 16 calculations.
@@ -295,5 +293,10 @@ Martin C Schwarzer
 This document is licensed \ccbysa.
 \end{flushright}
 
+%%because there currently is not enough to fill the second page
+%\columnbreak
+%\null\vfill\null
+%\columnbreak
+%\null\vfill\null
 
 \end{document}
