update documentation; bump to dev version number

--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -37,7 +37,7 @@
 \newcommand\mybackslash{\char`\\}
 
 % What this is about
-\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.0.17, 2018-10-09)}
+\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.1.0.dev, 2018-11-XX)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -202,6 +202,7 @@ Usage: \texttt{g16.optinput.sh [opt] <file>}
   \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{opt} keyword.
   \item[-r <ARG>] Add \texttt{ARG} to route section
   \item[-t <ARG>] Adds \texttt{ARG} to end of file
+  \item[-f <ARG>] Filename of generated input
   \item[-m <INT>] Memory (megabyte)
   \item[-p <INT>] Processors
   \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
