--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -252,6 +252,7 @@ If no files given, it finds energy statements from all log files in the current 
 \begin{rslisttt}{-m <ARG>}
   \item[-i <ARG>] Specify input suffix if processing directory
   \item[-o <ARG>] Specify output suffix if processing directory
+  \item[-L      ] Print the full file and path name (seperated by newline)
   \item[-s      ] Silence script (incremental)
   \item[-h      ] Help file 
 \end{rslisttt}
