Updated reference sheet to include -M switch  (#48)

--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -233,6 +233,8 @@ Usage: \texttt{g16.submit.sh [opt] <file>}
     %\item[-q <ARG>] Specify queue (TODO)
   \item[-P <ARG>] Account to project (BSUB);
     if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
+  \item[-M <ARG>] Specify a machine type (BSUB);
+    if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
   \item[-u <ARG>] set user email address (BSUB);
     if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
   \item[-s      ] Silence script (incremental)
