Added another filter option '%f' to -j flag of g16.prepare, updated refsheet

--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -109,6 +109,7 @@ Usage: \texttt{g16.prepare.sh [opt] <file>}
     \item[\%U] unpaired electrons (with indicator \texttt{uhf})%
   \end{rsinline}
   \item[-j <ARG>] Jobname 
+  \item[-j \%f  ] Jobname is filename filtering \texttt{.xyz}
   \item[-j \%s  ] Jobname is filename filtering \texttt{start.xyz}
   \item[-f <ARG>] Filename of generated input
   \item[-c <NUM>] Charge 
