--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -37,7 +37,7 @@
 \newcommand\mybackslash{\char`\\}
 
 % What this is about
-\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.1.0.dev, 2018-12-XX)}
+\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.1.0, 2019-02-04)}
 \author{Martin C Schwarzer}
 \date{\today}
 
