Bugfix: Removed minor typeface errors from refsheet source, recompiled refsheet

--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -141,7 +141,7 @@ with the Gaussian 16 utility \texttt{testrt}.
 
 This tool reads in a Gaussian 16 inputfile (of a preferably completed calculation)
 and adds relevant keywords for solvent corrections.
-(Utilises the \texttt{\%OldChk} directive and the 	exttt{geom}/	exttt{guess} keywords.)
+(Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
 Usage: \texttt{g16.dissolve.sh [opt] <file>}
 
@@ -164,7 +164,7 @@ Usage: \texttt{g16.dissolve.sh [opt] <file>}
 
 This tool reads in a Gaussian 16 inputfile (of a preferably completed calculation)
 and adds relevant keywords for a frequency calculation.
-(Utilises the \texttt{\%OldChk} directive and the 	exttt{geom}/	exttt{guess} keywords.)
+(Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
 Usage: \texttt{g16.freqinput.sh [opt] <file>}
 
@@ -188,7 +188,7 @@ Usage: \texttt{g16.freqinput.sh [opt] <file>}
 
 This tool reads in a Gaussian 16 inputfile from a (previously completed) frequency run and 
 adds relevant keywords for two separate irc calculations.
-(Utilises the \texttt{\%OldChk} directive and the 	exttt{geom}/	exttt{guess} keywords.)
+(Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
 Usage: \texttt{g16.ircinput.sh [opt] <file>}
 
@@ -212,7 +212,7 @@ Usage: \texttt{g16.ircinput.sh [opt] <file>}
 
 This tool reads in a Gaussian 16 inputfile preferably from a (previously completed) IRC run and 
 writes and inputfile for a subsequent structure optimisation.
-(Utilises the \texttt{\%OldChk} directive and the 	exttt{geom}/	exttt{guess} keywords.)
+(Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
 Usage: \texttt{g16.optinput.sh [opt] <file>}
 
