--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -359,6 +359,8 @@ Usage: \texttt{g16.chk2xyz.sh [-s] -h | -a | <chk-file(s)>}
 
 \tikzinput[width=1\textwidth]{./graphics/tikz-optimisation-flowchart}
 
+\tikzinput[width=1\textwidth]{./graphics/tikz-transitionstate-flowchart}
+
 \section{Author, Bugs, and the Rest}
 
 \begin{flushright}
